# screen-message

./: .gitignore  .travis.yaml  .travis.yml  CHANGES.md  Makefile  Makefile.am  README.Win32  README.Win32.in  README.md  configure.ac  gtkzoom.c  gtkzoom.h  push-sm.nomeata.de.sh  setup.iss.in  sm.1  sm.6  sm.c  sm.desktop  sm.desktop.in  sm.html  sm.py  sm.rc  sm.webapp  webapp.html
.github/: dependabot.yml
.github/workflows/: linux.yml
debian/: changelog  control  copyright  rules  sm.install  sm.manpages  sm.menu  watch
debian/upstream/: metadata
demo/: bsod-win8.xml  panic.xml
docs/: CNAME
